--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,42 @@
 {
-  "extends": "next/core-web-vitals"
+  "env": {
+    "browser": true,
+    "es2021": true,
+    "jest": true
+  },
+  "extends": [
+    "next/core-web-vitals",
+    "plugin:react/recommended",
+    "airbnb",
+    "prettier"
+  ],
+  "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+      "ecmaFeatures": {
+        "jsx": true
+      },
+      "ecmaVersion": "latest",
+      "sourceType": "module"
+    },
+    "plugins": [
+      "react",
+      "@typescript-eslint"
+    ],
+    "rules": {
+      "react/react-in-jsx-scope": "off",
+      "import/no-unresolved": "off",
+      "indent": ["error", 2],
+      "semi": ["error", "never"],
+      "spaced-comment": "off",
+      "react/jsx-filename-extension": "off",
+      "react/jsx-no-constructed-context-values": "off",
+      "import/extensions": [
+          "never",
+          "ignorePackages",
+          {
+              "ts": "never",
+              "tsx": "never"
+          }
+      ]
+    }
 }
