--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "13.1.1",
+    "@next/font": "^13.1.1",
     "@radix-ui/react-slot": "^1.0.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
