--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test": "jest",
+    "test": "jest --watchAll",
     "lint": "next lint"
   },
   "dependencies": {
@@ -26,17 +26,13 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
-    "@swc/core": "^1.3.25",
-    "@swc/jest": "^0.2.24",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
+    "@testing-library/react": "^14.0.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-storybook": "^0.6.10",
-    "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.3.1",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "prettier": "^2.8.2",
-    "ts-node": "^10.9.1",
     "typescript-plugin-css-modules": "^4.1.1"
   }
 }
