--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,8 @@
     },
     "plugins": [
       "react",
-      "@typescript-eslint"
+      "@typescript-eslint",
+      "eslint-plugin-jsx-a11y"
     ],
     "rules": {
       "react/react-in-jsx-scope": "off",
